index terminado, template de blogs

--- a/blogs.html
+++ b/blogs.html
@@ -1,10 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="./css/teme.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/font/flaticon.css">
+    <title>Mi blogs</title>
 </head>
 <body>
+<header>
+    <section class="header-icons-container">
+        <div class="icons">
+
+            <a href=""><span class="flaticon-001-facebook"></span></a>
+            <a href=""><span class="flaticon-002-twitter"></span></a>
+            <a href=""><span class="flaticon-011-instagram"></span></a>
+            <a href=""><span class="flaticon-010-linkedin"></span></a>
+            <a href=""><span class="flaticon-008-youtube"></span></a>
+
+        </div>
+    </section>
+
+    <nav>
+        <section class="nav-logo-container">
+            <a href=""> <img src="./assets/img/Logo-negro.png" alt="logo"></a>
+        </section>
+        <section class="profile-link">
+            <a href="./perfil.html" >sobre mi</a>
+        </section>
+    </nav>
+
+</header>
+
+<main>
+    <section>
+        <article>
+            <figure>
+                <h2>Noticias</h2>
+                <img src="./assets/img/main-news-img.png" alt="">
+            </figure>
+
+            <div>
+                <h2>
+                    Titulo del blogpost
+                </h2>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam.
+                </p>
+
+                <button>
+                    <a href="#">leer mas</a>
+                </button>
+            </div>
+        </article>
+    </section>
+</main>
 
 </body>
 </html>
