--- a/index.html
+++ b/index.html
@@ -5,31 +5,44 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/main.css">
+
+    <link rel="stylesheet" href="./css/teme.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="css/main-index.css">
+    <link rel="stylesheet" href="./css/font/flaticon.css">
     <title>Mi blog</title>
 </head>
     <body>
     <header>
-        <section>
-            <div>
-                <a href="">facebbok</a>
-                <a href="">twitter</a>
-                <a href="">instagram</a>
-                <a href="">linkedin</a>
-                <a href="">youtube</a>
+        <section class="header-icons-container">
+            <div class="icons">
+
+                <a href=""><span class="flaticon-001-facebook"></span></a>
+                <a href=""><span class="flaticon-002-twitter"></span></a>
+                <a href=""><span class="flaticon-011-instagram"></span></a>
+                <a href=""><span class="flaticon-010-linkedin"></span></a>
+                <a href=""><span class="flaticon-008-youtube"></span></a>
+
             </div>
         </section>
-        <section>
-            <nav>
-                <section>
-                    <a href="">logo</a>
-                </section>
-                <section>
-                    <a href="./perfil.html" >sobre mi</a>
-                </section>
-            </nav>
-        </section>
+
+        <nav>
+            <section class="nav-logo-container">
+                <a href=""> <img src="./assets/img/Logo-negro.png" alt="logo"></a>
+            </section>
+            <section class="profile-link">
+                <a href="./perfil.html" >sobre mi</a>
+            </section>
+        </nav>
+
     </header>
+
+    <main>
+        <section class="info-container-main">
+            <h2> Conoce las novedades y noticias del mundo tech </h2>
+            <button> <a href="./blogs.html"> Entra ya! </a> </button>
+        </section>
+    </main>
 
     </body>
 </html>
