terminado la seccion de blogs

--- a/blogs.html
+++ b/blogs.html
@@ -6,8 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="./css/teme.css">
+
     <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/main-blogs.css">
     <link rel="stylesheet" href="./css/font/flaticon.css">
     <title>Mi blogs</title>
 </head>
@@ -37,29 +38,109 @@
 </header>
 
 <main>
-    <section>
-        <article>
+    <section class="principal-article-content">
+        <article class="principal-article">
             <figure>
                 <h2>Noticias</h2>
                 <img src="./assets/img/main-news-img.png" alt="">
             </figure>
 
-            <div>
+            <div class="info-article">
                 <h2>
                     Titulo del blogpost
                 </h2>
 
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Quisquam, quidem, quisquam.
                 </p>
 
                 <button>
-                    <a href="#">leer mas</a>
+                    <a href="./blog.html">leer mas</a>
                 </button>
             </div>
         </article>
     </section>
+
+    <section class="section-article-container">
+        <h2>ultimos blogpost</h2>
+        <div class="articles-container">
+
+            <article>
+                <img src="./assets/img/post-1.png">
+                <h2>titulo blogpost</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam.
+                </p>
+                <button> <a href="./blog.html">leer mas</a> </button>
+            </article>
+
+            <article>
+                <img src="./assets/img/post-2.png">
+                <h2>titulo blogpost</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam.
+                </p>
+                <button> <a href="./blog.html">leer mas</a> </button>
+            </article>
+            <article>
+                <img src="./assets/img/post-3.png">
+                <h2>titulo blogpost</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam.
+                </p>
+                <button> <a href="./blog.html">leer mas</a> </button>
+            </article>
+            <article>
+                <img src="./assets/img/post-1.png">
+                <h2>titulo blogpost</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam.
+                </p>
+                <button> <a href="./blog.html">leer mas</a> </button>
+            </article>
+            <article>
+                <img src="./assets/img/post-2.png">
+                <h2>titulo blogpost</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam.
+                </p>
+                <button> <a href="./blog.html">leer mas</a> </button>
+            </article>
+            <article>
+                <img src="./assets/img/post-3.png">
+                <h2>titulo blogpost</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quisquam, quidem, quisquam.
+                </p>
+                <button> <a href="./blog.html">leer mas</a> </button>
+            </article>
+
+
+        </div>
+
+    </section>
+
 </main>
 
 </body>
